test/deprecated/oneElemArraysNoCommas.chpl
var A = [1];
var B = [2,];
var C = [3,4];
var D = [5,6,];

writeln(A);
writeln(B);
writeln(C);
writeln(D);

